--- a/index.html
+++ b/index.html
@@ -28,18 +28,32 @@
         .main-container {
             padding-top: 60px;
         }
+
+        .profile-picture {
+            width: 250px;
+            height: auto;
+            border: 10px solid #ffb6c1; /* Warna pink pastel yang lebih imut */
+            border-radius: 50%; /* Membuat bingkai menjadi bulat */
+            box-shadow: 0px 4px 15px rgba(255, 182, 193, 0.9), 0px 0px 15px 10px rgba(255, 105, 180, 0.6); /* Efek glitter lebih lembut */
+            padding: 10px; /* Ruang ekstra antara border dan gambar */
+            background: linear-gradient(45deg, #ffb6c1, #ffc0cb, #ff69b4); /* Gradasi pink untuk efek lebih lucu */
+            animation: sparkle 1.5s infinite alternate;
+        }
+
+        @keyframes sparkle {
+            0% { box-shadow: 0px 4px 15px rgba(255, 182, 193, 0.9), 0px 0px 10px 5px rgba(255, 105, 180, 0.6); }
+            100% { box-shadow: 0px 4px 20px rgba(255, 105, 180, 1), 0px 0px 20px 10px rgba(255, 192, 203, 0.9); }
+        }
     </style>
 </head>
 
 <body>
-    <!-- Header -->
     <header>
         <div class="main-container">
             <div class="nav">
                 <div class="logo">
                     <a href="#">Web Profile</a>
                 </div>
-
                 <nav>
                     <ul>
                         <li><a href="#home">Home</a></li>
@@ -55,25 +69,20 @@
                     <div class="home-left">
                         <h3 class="pre-title">Hello Everyone!! My Name Is</h3>
                         <h1 class="home-name">KANYA ALYA JAZILA</h1>
-                        <p>I'm a Student At MAN IC KOTA BATAM, I'm from batam city. Reading and sleeping are my favorite ways to
-                            kill time. 😺😺</p>
+                        <p>I'm a Student At MAN IC KOTA BATAM, I'm from Batam city. Reading and sleeping are my favorite ways to kill time. 😺😺</p>
                         <br>
-                        <a
-                            href="https://www.instagram.com/kanyaalyaa?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">
+                        <a href="https://www.instagram.com/kanyaalyaa">
                             <button class="btn">Click Me!!🤩🤩</button>
                         </a>
                     </div>
                     <div class="home-right">
-                        <img src="assets/webcam-toy-photo53.jpg" alt="Profile-Picture"
-                            style="width: 250px; height: auto;">
+                        <img src="assets/webcam-toy-photo53.jpg" alt="Profile-Picture" class="profile-picture">
                     </div>
                 </div>
             </section>
         </div>
     </header>
-    <!-- End Of Header -->
 </body>
-
 </html>
 
 
@@ -83,7 +92,7 @@
     <div class="main-container">
         <h2 class="section-title-about">About Me</h2>
         <p style="text-align: center;">I Love Economic Math, Math, read, and sleep. Sometimes i am playing mobile
-            legends game and sleeping all day long. </p>
+            legends game and sleeping all day long. As an INTP, I often get lost in my own thoughts, analyzing every possibility before making a decision, though I often end up stuck in uncertainty. </p>
         </p>
         <br>
         <div class="grid-3">
