--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <div class="home-left">
                         <h3 class="pre-title">Hello Everyone!! My Name Is</h3>
                         <h1 class="home-name">KANYA ALYA JAZILA</h1>
-                        <p>I'm a Student At MAN IC KOTA BATAM, I'm from Batam city. Reading and sleeping are my favorite ways to kill time. 😺😺</p>
+                        <p>I'm a Student At MAN IC KOTA BATAM, I was born in Batam 31 of July 2009. Reading and sleeping are my favorite ways to kill time. 😺😺</p>
                         <br>
                         <a href="https://www.instagram.com/kanyaalyaa">
                             <button class="btn">Click Me!!🤩🤩</button>
